:sparkles: ajout des routes get agent, map, role
