# src/routes/agentRoute.ts
@@ -1,9 +1,14 @@
 import { Router } from 'express';
 import { get } from 'http';
-import { getAgent } from '../controllers/agent/agent';
-
+import { getAllAgents, getAgentById } from '../controllers/agentController';
 const agentRouter = Router();
 
-agentRouter.get('/', getAgent);
+// Route pour récupérer tous les agents
+agentRouter.get('/', getAllAgents);
+
+// Route pour récupérer un agent par son id
+agentRouter.get('/:id', getAgentById);
+
+
 
 export default agentRouter;
